<?xml version="1.0"?>
<package format="2">
    <name>plugins</name>
    <version>0.0.0</version>
    <description>The particle_generator package</description>

    <maintainer email="706545330@qq.com">ou</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>gazebo_ros</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <export>
    </export>
</package>
